iaas/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment ## deployment controller name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app-template ## what we want to replicate
  template:
    metadata:
      labels:
        app: nginx-app-template ## the application name, usually nginx-app
    spec:
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
      containers:
      - name: nginx-api ## just a container name
        image: nginx ## this is the docker image
        resources:
          limits:
            memory: 256Mi
            cpu: 0.5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: task-pv-storage
