iaas/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: 256Mi
        cpu: 0.5
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
