iaas/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx-app-template ## this is spec.template.metadata.labels.app value from ping-deployment.yaml
  ports:
  - name: http
    port: 80
