iaas/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: api.nginx.example
    http: 
      paths:
      - path: /nginx
        backend:
          serviceName: nginx
          servicePort: 80
